# mailchimp-haskell

./: mailchimp.cabal
src/Web/MailChimp/Campaign/: Campaign.hs
src/Web/MailChimp/List/: Member.hs
