name: mailchimp
version: 0.4.0
cabal-version: >=1.21
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2016 Juan Pedro Villa Isaza
maintainer: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
stability: Experimental
homepage: https://github.com/jpvillaisaza/mailchimp-haskell
bug-reports: https://github.com/jpvillaisaza/mailchimp-haskell/issues
synopsis: Bindings for the MailChimp API
description:
    Haskell bindings for the MailChimp API.
category: Web
author: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
tested-with: GHC ==7.10.3 GHC ==8.0.1 GHC ==8.0.2
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/jpvillaisaza/mailchimp-haskell

library
    exposed-modules:
        Web.MailChimp
        Web.MailChimp.Common
        Web.MailChimp.Extra
        Web.MailChimp.Key
        Web.MailChimp.List
        Web.MailChimp.List.Member
        Web.MailChimp.Tutorial
    build-depends:
        aeson -any,
        attoparsec -any,
        base -any,
        bytestring -any,
        generics-sop -any,
        http-client -any,
        http-client-tls -any,
        servant -any,
        servant-client -any,
        text -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paths_mailchimp
    ghc-options: -Wall

test-suite sd
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec >=2.4 && <2.5,
        mailchimp -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Web.MailChimpSpec
